<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Project: meteo
  ~ File: strings.xml
  ~
  ~ Created by fattazzo
  ~ Copyright © 2019 Gianluca Fattarsi. All rights reserved.
  ~
  ~ MIT License
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->

<resources>

    <string name="app_name">Meteo Trentino</string>

    <string name="author">Autore</string>
    <string name="author_name">Fattarsi Gianluca</string>
    <string name="author_email">fattazzo82@gmail.com</string>
    <string name="project_link">Sorgente</string>
    <string name="report_error">Segnalazioni</string>
    <string name="play_store">Play store</string>

    <string name="app_title">Meteo del Trentino</string>

    <string name="changelog">Versioni</string>
    <string name="changelog_activity_title">Elenco delle versioni</string>

    <string name="other_apps">Altre applicazioni</string>

    <!-- About -->
    <string name="about_text">Informazioni meteo ottenute tramite l\'Ufficio Previsioni e Pianificazione della Provincia Autonoma di Trento dal sito: http://dati.trentino.it forniti da www.meteotrentino.it</string>
    <!-- About -->

    <string name="default_label_text">-.-</string>
    <string name="dialog_color_picker">Color Picker</string>
    <string name="press_color_to_apply">Seleziona il colore da utilizzare</string>

    <string name="graph">Grafico</string>
    <string name="table">Tabella</string>
    <string name="date_time">Data e ora</string>
    <string name="name">Nome</string>
    <string name="code">Codice</string>

    <string name="yes">Si</string>
    <string name="no">No</string>

    <string name="wait">Attendere</string>

    <string name="service_error">Meteo del Trentino: Rete non disponibile o servizio momentaneamente non raggiungibile. Riprovare più tardi</string>

    <string name="refresh">Ricarica</string>
    <string name="fullscreen">Schermo intero</string>

    <string name="zone_NW">NW</string>
    <string name="zone_NE">NE</string>
    <string name="zone_S">S</string>

    <string name="title_activity_main">Bollettino metereologico</string>
    <string name="title_activity_bollettino_probabilistico">Bollettino probabilistico</string>
    <string name="title_activity_news">News</string>
    <string name="title_activity_webcams_viewer">Webcam</string>
    <string name="title_activity_radar">Radar</string>
    <string name="title_activity_stazioni_meteo">Stazioni meteo</string>
    <string name="title_activity_stazioni_valanghe">Neve e valanghe</string>

    <string name="exit_message">Uscire dall\'applicazione?</string>

    <string name="show">Visualizza</string>
    <string name="all">Tutte</string>

    <string name="location">Località</string>

    <string name="favorite">Favorite</string>
    <string name="widget">Widget</string>

    <string name="bug_report_user_request">Descrivi la tua richiesta o problema prima di questo testo.Per favore non rimuovere le informazioni che trovi di seguito, serviranno per risolvere il tuo problema al meglio.</string>

    <string name="max">Massima</string>
    <string name="min">Minima</string>

    <string name="google_maps">Google maps</string>
    <string name="street_view">Street view</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>

    <string name="versioni_precedenti">Versioni precedenti</string>
</resources>
