<?xml version="1.0" encoding="utf-8"?>
<!--
  ~
  ~ Project: meteo
  ~ File: preference_zone_widget_layout.xml
  ~
  ~ Created by fattazzo
  ~ Copyright © 2018 Gianluca Fattarsi. All rights reserved.
  ~
  ~ MIT License
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  ~
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/preferences_zone_widget_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_margin="4dp" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/preferences_zone_widget_description"
            android:layout_marginTop="15dp" >

            <ImageView
                android:id="@+id/preferences_zone_widget_img_trentino"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:src="@drawable/trentino" android:contentDescription="@string/map_of_tentino"/>

            <RelativeLayout
                android:id="@+id/preferences_zone_widget_NW"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_alignLeft="@+id/preferences_zone_widget_img_trentino"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dp"
                android:background="@color/darkButtonBar_bg_color" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:text="@string/zone_NW"
                    android:textAppearance="?android:attr/textAppearanceLarge" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/preferences_zone_widget_NE"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_alignRight="@+id/preferences_zone_widget_img_trentino"
                android:layout_marginRight="10dp"
                android:layout_marginTop="15dp"
                android:background="@color/temp_max" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:text="@string/zone_NE"
                    android:textAppearance="?android:attr/textAppearanceLarge" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/preferences_zone_widget_S"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_alignBottom="@+id/preferences_zone_widget_img_trentino"
                android:layout_alignLeft="@+id/preferences_zone_widget_img_trentino"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="35dp"
                android:background="@color/temp_min" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:text="@string/zone_S"
                    android:textAppearance="?android:attr/textAppearanceLarge" />
            </RelativeLayout>
        </RelativeLayout>
    </RelativeLayout>

</ScrollView>